# donatello

./: LICENSE  README.md  README_UK.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
donatello/: __init__.py  exceptions.py
donatello/client/: __init__.py  async_client.py  base.py  client.py
donatello/driver/: __init__.py  api_driver.py  async_api_driver.py  base.py
donatello/models/: __init__.py  client.py  client_list.py  donate.py  donate_list.py  user.py  user_donates.py
donatello_api/: __init__.py  client.py  driver.py  models.py
test/: get_clients_test.py  get_donates_test.py  get_me_test.py
