[project]
name = "donatello_api"
version = "1.0.4"
authors = [
  { name="selfkilla666", email="selfkilla666@yahoo.com" },
]
description = "ðŸ Python API wrapper for Ukrainian donate service Donatello"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['aiohttp', 'requests', 'pydantic']
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/selfkilla666/donatello_api/"