[metadata]
name = donatello
version = 1.0.7
author = selfkilla666
author_email = selfkilla666@yahoo.com
description-file=README.md
long_description = file: README.md
long_description_content_type = text/markdown
license_files=LICENSE
url = https://github.com/selfkilla666/donatello/
project_urls =
    Bug tracker = https://github.com/selfkilla666/donatello/issues
    Repository = https://github.com/selfkilla666/donatello

[options]
package_dir =
    = donatello
packages = find:
python_requires = >=3.9

[options.packages.find]
where = donatello